--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <version>2.53.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.detro.ghostdriver</groupId>
+            <artifactId>phantomjsdriver</artifactId>
+            <version>1.0.4</version>
+        </dependency>
 
     </dependencies>
 
